--- a/index.html
+++ b/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Dice Game</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="https://img.icons8.com/emoji/50/000000/game-die.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Raleway:wght@500&display=swap" rel="stylesheet">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Drum Kit</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="https://img.icons8.com/emoji/50/000000/drum-emoji.png">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+</head>
 
-    <div class="container">
-      <h1><span>🎲</span>Roll The Dice<span>🎲</span></h1>
+<body>
 
-      <div class="dice">
-        <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
-      </div>
-
-      <div class="dice">
-        <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
-      </div>
-
-    </div>
-      <button>Let's Go</button>
-  <script src = "javascript/index.js" charset="utf-8"></script>
-  </body>
+  <h1 id="title">🥁 Drum Kit 🥁</h1>
+  <p class="instructions">Use the Keyboard Keys or Simply Click on the Buttons</p>
+  <div class="set">
+    <button class="w drum">w</button>
+    <button class="a drum">a</button>
+    <button class="s drum">s</button>
+    <button class="d drum">d</button>
+    <button class="j drum">j</button>
+    <button class="k drum">k</button>
+    <button class="l drum">l</button>
+  </div>
 
   <footer>
-    <p class = "footer-txt">Made with ❤ by Aparna Raj</p>
+    Made with ❤ by Aparna Raj
   </footer>
+
+  <script src="index.js" charset="utf-8"></script>
+</body>
+
 </html>
